# final_yearproject

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh  zazah.db  zazah.db.bak.1777642860
.agent/: 00_PROJECT_OVERVIEW.md  AGENT_CODING_GUIDE.md  UI_SPEC.md  ml_train.py  seed_rules.py
.github/workflows/: ci.yml
data/: dt_model.joblib  feature_columns.joblib  metrics.json  preprocessor.joblib  rf_model.joblib  seed_rules.py  typhoid_test.csv  typhoid_train.csv
docs/: README.md
engine/: __init__.py  hybrid_module.py  inference_engine.py  preprocessor.py  rf_classifier.py
ml/: train.py
models/: __init__.py  audit_log.py  diagnostic_result.py  knowledge_rule.py  patient_record.py  system_user.py
routes/: __init__.py  admin.py  auth.py  diagnosis.py  history.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  history.html  login.html  signup.html
templates/admin/: panel.html  reports.html  retrain.html  rules.html  rules_edit.html  rules_new.html  users.html  users_new.html
templates/diagnosis/: new.html  result.html
tests/: conftest.py  test_engine.py
