[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zazah"
version = "1.0.0"
description = "Medical diagnostic support system for typhoid fever diagnosis"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "ZAZAH Team", email = "contact@zazah.example.com"}
]
keywords = ["medical", "diagnosis", "typhoid", "expert-system", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3.3",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "Werkzeug>=2.3.7",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.23",
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2",
    "joblib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
]
ml = [
    "matplotlib>=3.7.4",
    "seaborn>=0.12.2",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zazah*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv"]